# gena

./: .gitignore  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
archive/www-v4/: README.md
archive/www-v4/src/: App.tsx
examples/todolist/: pyproject.toml  todolist.db
examples/todolist/todolist/: app.py  cli.py  models.py
examples/todolist/todolist/www/: asset-manifest.json  index.html
examples/todolist/todolist/www/static/css/: main.069dcdc4.chunk.css  main.f247533d.chunk.css  main.f247533d.chunk.css.map
examples/todolist/todolist/www/static/js/: 2.c32ae740.chunk.js  2.c32ae740.chunk.js.map  2.c58758b6.chunk.js  2.c58758b6.chunk.js.map  3.ea2a820a.chunk.js  3.ea2a820a.chunk.js.map  main.4871f397.chunk.js  main.4871f397.chunk.js.map  main.52ef21bf.chunk.js.map  runtime-main.67792f94.js  runtime-main.67792f94.js.map  runtime-main.f89fc3d2.js
examples/todolist/www/: .gitignore  package-lock.json  package.json
examples/todolist/www-v4/: package.json
examples/todolist/www-v4/src/: index.tsx  routes.tsx
examples/todolist/www-v4/src/pages/: HomePage.tsx
examples/todolist/www/.yalc/@gena/www/: package.json  yalc.sig
examples/todolist/www/.yalc/rma-baseapp/: package.json  yalc.sig
examples/todolist/www/src/: index.css  index.tsx
examples/todolist/www/src/components/: NavBar.tsx  Navbar.module.css
examples/todolist/www/src/models/: TodoListStore.ts
examples/todolist/www/src/pages/: HomePage.tsx
flask_peewee_restful/: __init__.py  api_generator.py  app_generator.py  client.py  custom_fields.py  deserializer.py
frontend_framework/: package.json
frontend_framework/src/: App.tsx  index.ts
frontend_framework/src/components/: Navbar.tsx  index.ts
frontend_framework/src/models/: CRUDStore.ts  RStore.ts  Record.ts  StoreIndex.ts  index.ts
frontend_framework/src/pages/: NotFoundPage.tsx  index.ts
gena/: api_generator.py  api_testsuite.py  app_generator.py  client.py  config.py  custom_fields.py  deserializer.py  serializer.py
tests/: import_test.py
todolist/: pyproject.toml  todolist.db
todolist/todolist/: app.py  cli.py  main.py  models.py
todolist/todolist/www/: asset-manifest.json  index.html
todolist/todolist/www/static/css/: main.069dcdc4.chunk.css.map
todolist/todolist/www/static/js/: 2.936feac4.chunk.js  2.936feac4.chunk.js.map  3.021a2a2b.chunk.js  3.021a2a2b.chunk.js.map  3.54bddbf6.chunk.js  3.54bddbf6.chunk.js.map  main.52ef21bf.chunk.js  main.cbcd5131.chunk.js  main.cbcd5131.chunk.js.map  runtime-main.05dbefa3.js  runtime-main.05dbefa3.js.map  runtime-main.f89fc3d2.js.map
todolist/www/: package.json
todolist/www/.yalc/rma-baseapp/: package.json  yalc.sig
todolist/www/src/: index.css  index.tsx  routes.tsx
todolist/www/src/models/: TodoListStore.ts  index.ts
todolist/www/src/pages/: HomePage.tsx
www/: package-lock.json  package.json  tsconfig.json
www/src/: App.tsx  index.ts
(+23 files in other folders)
