[tool.poetry]
name = "gena"
version = "1.6.6"
description = "Generate APIs from Database Models"
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.15.2"
Flask = "^2.2.2"
requests = "^2.28.0"
loguru = "^0.7.0"
typing_extensions = "^4.0.0"
orjson = ">= 3.9.0, < 4.0.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
