[tool.poetry]
name = "todolist"
version = "1.0.0"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.0"
tornado = "^6.2"
orjson = ">= 3.9.0, < 4.0.0"
gena = "^1.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
